# access-cli

./: .gitignore  AccessCli.sln  LICENSE  README.md  install.ps1  pyproject.toml
src/AccessCli/: AccessCli.csproj  AccessService.cs  IAccessService.cs  Program.cs  Updater.cs
src/access_cli/: access_com.py  forms.py  main.py  vba.py
tests/AccessCli.Tests/: AccessCli.Tests.csproj  MockAccessServiceTests.cs  SetCaptionTests.cs
