[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "access-cli"
version = "0.1.0"
description = "CLI tool for Microsoft Access VBA and form editing"
requires-python = ">=3.8"
dependencies = [
    "pywin32",
    "click",
]

[project.scripts]
access-cli = "access_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/access_cli"]
